# ai-text2image

./: Makefile  README.md  app.py  justfile  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
